crates/squealy-macros/tests/compile_fail/conflicting_primary_key_nullable.rs
use squealy::*;

#[derive(Table)]
struct Widget<'scope, C: ColumnMode = ColumnExpr> {
    #[column(primary_key)]
    id: C::Type<'scope, Option<i32>>,
}

fn main() {}
